--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
 
+    <!-- Parent shipped with start.spring.io -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -22,20 +23,24 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+
+        <!-- I needed to add this -->
+        <selenium.version>3.0.1</selenium.version>
     </properties>
 
     <dependencies>
+        <!-- These shipped with start.spring.io -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
+        <!-- These were copied from fluentlenium docs -->
         <dependency>
             <groupId>org.fluentlenium</groupId>
             <artifactId>fluentlenium-junit</artifactId>
@@ -57,7 +62,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>htmlunit-driver</artifactId>
-            <version>2.23</version>
+            <version>2.23.2</version>
             <scope>test</scope>
         </dependency>
         <!-- jetty websocket is currently required by htmlunit-driver -->
@@ -79,6 +84,15 @@
             <version>1.4.01</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- I needed to add this -->
+        <dependency>
+            <groupId>net.sourceforge.htmlunit</groupId>
+            <artifactId>htmlunit</artifactId>
+            <version>2.23</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
